<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:paddingBottom="@dimen/_20sdp"


       >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.301" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoSizeTextType="uniform"
            android:text="@string/fill"
            android:textAlignment="center"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="UnusedAttribute" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"



        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
           >

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"

                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPersonName" />


            <LinearLayout
                android:id="@+id/linear_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:text="Choose Job"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_16sdp" />

                <RadioGroup
                    android:id="@+id/radio_group"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <RadioButton

                        android:id="@+id/driver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Driver" />

                    <RadioButton
                        android:id="@+id/mechanic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mechanic" />

                    <RadioButton
                        android:id="@+id/rescue_winch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rescue winch" />
                </RadioGroup>

            </LinearLayout>
            <Button
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:background="@drawable/rounded"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:text="@string/sign_up_button"

                android:textAllCaps="false" />


        </LinearLayout>
    </ScrollView>










</LinearLayout>